# pvcRiemannSolvers

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  ____init_____8py.html  ____init_____8py_source.html  airfoil_8hpp.html  airfoil_8hpp__dep__incl.map  airfoil_8hpp__dep__incl.md5  airfoil_8hpp__incl.map  airfoil_8hpp__incl.md5  airfoil_8hpp_source.html  algebra_2eigen_8hpp.html  algebra_2eigen_8hpp.js  algebra_2eigen_8hpp__dep__incl.map  algebra_2eigen_8hpp__dep__incl.md5  algebra_2eigen_8hpp__incl.map  algebra_2eigen_8hpp__incl.md5  algebra_2eigen_8hpp_source.html  annotated.html  annotated_dup.js  ausm_8hpp.html  ausm_8hpp__incl.map  ausm_8hpp__incl.md5  ausm_8hpp_source.html  average_8hpp.html  average_8hpp.js  average_8hpp__incl.map  average_8hpp__incl.md5  average_8hpp_source.html  basis_2linear_8hpp.html  basis_2linear_8hpp__dep__incl.map  basis_2linear_8hpp__dep__incl.md5  basis_2linear_8hpp__incl.map  basis_2linear_8hpp__incl.md5  basis_2linear_8hpp_source.html  blade_8hpp.html  blade_8hpp__dep__incl.map  blade_8hpp__dep__incl.md5  blade_8hpp__incl.map  (+2595 more)
.github/workflows/: build.yml  doxygen.yml
demo/: CMakeLists.txt
demo/burgers/: standing.cpp  standing.json
demo/cgns/: CMakeLists.txt  add_cell_quality.cpp  fix_broken_cells.cpp  sort_sections.cpp
demo/euler/: CMakeLists.txt  cylinder.cpp  double_mach.cpp  double_mach.json  forward_step.cpp  mach_disk.cpp  riemann2d.cpp  riemann2d.json  rotor_in_tunnel.cpp  rotor_over_ship.cpp  rotorcraft.cpp  rotorcraft.hpp  ship.cpp  shock_tube.cpp  shock_tube_daru.json  shock_tube_lax.cpp  shock_tube_lax.json  shock_tube_lax_exact.cpp  shock_tube_sod.cpp  shock_tube_sod.json  shock_tube_sod_exact.cpp  shock_tube_sod_exact.json  shock_tube_vacuum.cpp  shock_tube_vacuum.json  shock_tube_vacuum_exact.cpp  shu_osher.cpp  sourceless.cpp  sourceless.hpp  wing.cpp  yf17.cpp
demo/laminar/: CMakeLists.txt  blasius.cpp  cavity.cpp  daru_tenaud.cpp  diffusion.cpp  karman.cpp  plate.cpp  shocked.cpp  shocked.hpp  shockless.cpp  shockless.hpp  uniform.cpp
demo/linear/: CMakeLists.txt  diffusion.cpp  double.cpp  multiple.cpp  single.cpp  system.cpp  system.hpp
demo/polynomial/: single.cpp
include/mini/: rand.hpp
include/mini/aircraft/: source.hpp
include/mini/algebra/: eigen.hpp  root.hpp
include/mini/basis/: lagrange.hpp  linear.hpp  taylor.hpp  vincent.hpp
include/mini/coordinate/: cell.hpp  element.hpp  face.hpp  hexahedron.hpp  pyramid.hpp  quadrangle.hpp  quadrangle.py  tetrahedron.hpp  triangle.hpp  wedge.hpp
include/mini/gauss/: cell.hpp  element.hpp  face.hpp  hexahedron.hpp  jacobi.hpp  legendre.hpp  line.hpp  lobatto.hpp  pyramid.hpp  quadrangle.hpp  tetrahedron.hpp  triangle.hpp  wedge.hpp
include/mini/geometry/: cell.hpp  element.hpp  face.hpp  pi.hpp  quadrangle.py
include/mini/integrator/: cell.hpp  element.hpp  face.hpp  function.hpp  hexahedron.hpp  jacobi.hpp  legendre.hpp  line.hpp  lobatto.hpp  pyramid.hpp  quadrangle.hpp  tetrahedron.hpp  triangle.hpp  wedge.hpp
include/mini/limiter/: average.hpp  majority.hpp  reconstruct.hpp  weno.hpp
include/mini/mesh/: cgns.hpp  metis.hpp  overset.hpp  part.hpp  (+3 more)
input/: cavity.py  couette.py  cylinder.py  plate.py  riemann2d.py  shock_tube.geo  structured.geo  thickness_ratio.py
python/: blasius.csv  blasius.py  compare_errors.py  concept.py  discrete_fourier.py  distance.py  expansion.py  matplotlib_wrapper.py  polynomial.py  quadrangle.py  ratio.py  riemann.py  solver.py  spatial.py  test_detector.py  test_element.py  test_expansion.py  test_filter.py  test_limiter.py  test_polynomial.py  test_spatial.py  test_temporal.py  viewer.py  viscosity.py  warp_vtu.py  wave_number.py  wave_packet.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  (+117 more)
test/: CMakeLists.txt  rand.cpp
test/basis/: lagrange.cpp  linear.cpp  taylor.cpp  vincent.cpp
test/coordinate/: CMakeLists.txt  hexahedron.cpp  pyramid.cpp  quadrangle.cpp  tetrahedron.cpp  triangle.cpp  wedge.cpp
test/gauss/: hexahedron.cpp  pyramid.cpp  quadrangle.cpp  tetrahedron.cpp  triangle.cpp  wedge.cpp
test/geometry/: hexahedron.cpp  pyramid.cpp  quadrangle.cpp  tetrahedron.cpp  wedge.cpp
test/integrator/: CMakeLists.txt  hexahedron.cpp  jacobi.cpp  legendre.cpp  lobatto.cpp  pyramid.cpp  quadrangle.cpp  tetrahedron.cpp  triangle.cpp  wedge.cpp
test/limiter/: weno.cpp
test/mesh/: CMakeLists.txt  add_cell_quality.cpp  cgal.cpp  distance.cpp  distance.cu  distance.yaml  part.cpp  part.hpp  vtk.cpp
test/polynomial/: CMakeLists.txt  extrapolation.cpp  hexahedron.cpp  projection.cpp  quadrangle.cpp  tetrahedron.cpp  triangle.cpp
test/riemann/: CMakeLists.txt
test/riemann/diffusive/: CMakeLists.txt  navier_stokes.cpp
test/riemann/euler/: ausm.cpp  hllc.cpp  performance.cpp  types.cpp
test/riemann/rotated/: CMakeLists.txt  euler.cpp  simple.cpp
test/riemann/simple/: multiple.cpp
test/spatial/: dg.cpp  fr.cpp  riemann.hpp  viscosity.cpp
(+32 files in other folders)
